--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
                 <artifactId>spring-boot-starter-batch</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
             <!-- Spring End -->
             <!-- Database Start -->
             <dependency>
@@ -210,6 +215,24 @@
                 <groupId>br.com.sawcunha.dayoffmarker</groupId>
                 <artifactId>validator</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <!-- Idempotent -->
+            <dependency>
+                <groupId>com.trendyol</groupId>
+                <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
+                <version>1.0.12</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>2.6.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>6.1.6.RELEASE</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
