Job refactoring for holiday creation

--- a/resources/src/main/resources/application-postgres.yml
+++ b/resources/src/main/resources/application-postgres.yml
@@ -106,11 +106,10 @@ application:
       clear:
         fixedRateInMilliseconds: 43200000
     holiday:
-      initialDelayInMilliseconds: 180000
-      create:
-        fixedRateInMilliseconds: 180000
       update:
-        fixedRateInMilliseconds: 180000
+        cron: "* 30 0 * * *"
+      batch:
+        cron: "* */3 * * * *"
 
 jdempotent:
   enable: true
