--- a/application/pom.xml
+++ b/application/pom.xml
@@ -18,87 +18,46 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-actuator</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-actuator</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-actuator</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-cache</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-actuator</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-actuator</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.3.14</version>
-        </dependency>
-
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>service</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>security</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>configuration</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>job</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.trendyol</groupId>
-            <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
-        </dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>controller</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>domain</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>repository</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>specification</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>service</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>commons</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>security</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>configuration</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>job</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>validator</artifactId>
+			</dependency>
     </dependencies>
 
     <build>
