--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,44 +12,100 @@
     <artifactId>service</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+			<maven.compiler.source>17</maven.compiler.source>
+			<maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>specification</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>validator</artifactId>
-            <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>br.com.sawcunha.dayoffmarker</groupId>
-                    <artifactId>domain</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>br.com.sawcunha.dayoffmarker</groupId>
-                    <artifactId>specification</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-    </dependencies>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>domain</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>br.com.sawcunha.dayoffmarker</groupId>
+						<artifactId>commons</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jpa</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>specification</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>br.com.sawcunha.dayoffmarker</groupId>
+						<artifactId>domain</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>br.com.sawcunha.dayoffmarker</groupId>
+						<artifactId>commons</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>repository</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>br.com.sawcunha.dayoffmarker</groupId>
+						<artifactId>domain</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>br.com.sawcunha.dayoffmarker</groupId>
+						<artifactId>commons</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>commons</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-web</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.github.javafaker</groupId>
+						<artifactId>javafaker</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.google.code.gson</groupId>
+						<artifactId>gson</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.fusionauth</groupId>
+						<artifactId>fusionauth-jwt</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-core</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+		</dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
-            </plugin>
-        </plugins>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>17</source>
+						<target>17</target>
+					</configuration>
+				</plugin>
+			</plugins>
     </build>
 
 </project>
