--- a/specification/pom.xml
+++ b/specification/pom.xml
@@ -17,24 +17,67 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>br.com.sawcunha.dayoffmarker</groupId>
-            <artifactId>domain</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>domain</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>br.com.sawcunha.dayoffmarker</groupId>
+						<artifactId>commons</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jpa</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>br.com.sawcunha.dayoffmarker</groupId>
+				<artifactId>commons</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-web</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.mapstruct</groupId>
+						<artifactId>mapstruct</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.github.javafaker</groupId>
+						<artifactId>javafaker</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.google.code.gson</groupId>
+						<artifactId>gson</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>io.fusionauth</groupId>
+						<artifactId>fusionauth-jwt</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.liquibase</groupId>
+						<artifactId>liquibase-core</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
-            </plugin>
-        </plugins>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>17</source>
+						<target>17</target>
+					</configuration>
+				</plugin>
+			</plugins>
     </build>
 
 </project>
