--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
 			<module>job</module>
 			<module>specification</module>
 			<module>validator</module>
-    </modules>
+			<module>repository</module>
+			<module>controller</module>
+			<module>coverage</module>
+		</modules>
 
     <parent>
 			<groupId>org.springframework.boot</groupId>
@@ -34,6 +37,7 @@
 			<maven.compiler.source>17</maven.compiler.source>
 			<maven.compiler.target>17</maven.compiler.target>
 
+			<checkstyle-maven-plugin.version>3.0.0</checkstyle-maven-plugin.version>
 			<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 			<lombok.version>1.18.20</lombok.version>
 			<gson.version>2.8.9</gson.version>
@@ -52,42 +56,42 @@
 			<dependencies>
 				<!-- Spring Start -->
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-data-jpa</artifactId>
-						<version>${spring.version}</version>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-data-jpa</artifactId>
+					<version>${spring.version}</version>
 				</dependency>
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-web</artifactId>
-						<version>${spring.version}</version>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-web</artifactId>
+					<version>${spring.version}</version>
 				</dependency>
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-mail</artifactId>
-						<version>${spring.version}</version>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-mail</artifactId>
+					<version>${spring.version}</version>
 				</dependency>
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-security</artifactId>
-						<version>${spring.version}</version>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-security</artifactId>
+					<version>${spring.version}</version>
 				</dependency>
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-validation</artifactId>
-						<version>${spring.version}</version>
-						<scope>compile</scope>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-validation</artifactId>
+					<version>${spring.version}</version>
+					<scope>compile</scope>
 				</dependency>
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter</artifactId>
-						<version>${spring.version}</version>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter</artifactId>
+					<version>${spring.version}</version>
 				</dependency>
 				<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-devtools</artifactId>
-						<version>${spring.version}</version>
-						<scope>runtime</scope>
-						<optional>true</optional>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-devtools</artifactId>
+					<version>${spring.version}</version>
+					<scope>runtime</scope>
+					<optional>true</optional>
 				</dependency>
 				<dependency>
 					<groupId>org.springframework.boot</groupId>
@@ -221,6 +225,16 @@
 					<artifactId>validator</artifactId>
 					<version>${project.version}</version>
 				</dependency>
+				<dependency>
+					<groupId>br.com.sawcunha.dayoffmarker</groupId>
+					<artifactId>repository</artifactId>
+					<version>${project.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>br.com.sawcunha.dayoffmarker</groupId>
+					<artifactId>controller</artifactId>
+					<version>${project.version}</version>
+				</dependency>
 				<!-- Idempotent -->
 				<dependency>
 					<groupId>com.trendyol</groupId>
@@ -236,43 +250,48 @@
     </dependencyManagement>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>${org.mapstruct.version}</version>
-                        </path>
-                        <!-- other annotation processors -->
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-        </plugins>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+							</exclude>
+						</excludes>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.8.1</version>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+						<annotationProcessorPaths>
+							<path>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+								<version>${lombok.version}</version>
+							</path>
+							<path>
+								<groupId>org.mapstruct</groupId>
+								<artifactId>mapstruct-processor</artifactId>
+								<version>${org.mapstruct.version}</version>
+							</path>
+							<!-- other annotation processors -->
+						</annotationProcessorPaths>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>findbugs-maven-plugin</artifactId>
+					<version>3.0.5</version>
+				</plugin>
+			</plugins>
     </build>
 
 </project>
