--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,6 @@
 					<artifactId>spring-boot-starter-test</artifactId>
 					<version>${spring.version}</version>
 					<scope>test</scope>
-					<exclusions>
-							<exclusion>
-									<groupId>org.junit.vintage</groupId>
-									<artifactId>junit-vintage-engine</artifactId>
-							</exclusion>
-					</exclusions>
 				</dependency>
 				<dependency>
 					<groupId>org.springframework</groupId>
@@ -246,6 +240,30 @@
 					<artifactId>lettuce-core</artifactId>
 					<version>6.1.6.RELEASE</version>
 				</dependency>
+				<dependency>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-core</artifactId>
+					<version>3.9.0</version>
+				</dependency>
+				<!-- test -->
+				<dependency>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+					<version>4.13.1</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-all</artifactId>
+					<version>1.10.19</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+					<version>5.7.0</version>
+					<scope>test</scope>
+				</dependency>
 			</dependencies>
     </dependencyManagement>
 
@@ -263,6 +281,11 @@
 						</excludes>
 						<skip>true</skip>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
