--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -17,7 +17,6 @@
 	</properties>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>br.com.sawcunha.dayoffmarker</groupId>
 			<artifactId>domain</artifactId>
@@ -85,8 +84,14 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.protobuf</groupId>
+					<artifactId>protobuf-java</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
