--- a/pom.xml
+++ b/pom.xml
@@ -73,17 +73,22 @@
 			<dependencies>
 				<dependency>
 					<groupId>br.com.insidesoftwares</groupId>
-					<artifactId>commons</artifactId>
+					<artifactId>utils</artifactId>
 					<version>1.0-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>br.com.insidesoftwares</groupId>
-					<artifactId>execptioncommons</artifactId>
+					<artifactId>exception</artifactId>
 					<version>1.0-SNAPSHOT</version>
 				</dependency>
 				<dependency>
-					<groupId>br.com.insidesoftwares</groupId>
-					<artifactId>securitycommons</artifactId>
+					<groupId>br.com.insidesoftwares.securitycommons</groupId>
+					<artifactId>azure-active-directory</artifactId>
+					<version>1.0-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>br.com.insidesoftwares.securitycommons</groupId>
+					<artifactId>keycloak</artifactId>
 					<version>1.0-SNAPSHOT</version>
 				</dependency>
 				<!-- Spring Start -->
