--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>init</artifactId>
         <groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -71,6 +71,11 @@
 			<dependency>
 					<groupId>io.lettuce</groupId>
 					<artifactId>lettuce-core</artifactId>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			</dependency>
     </dependencies>
 
