--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>init</artifactId>
 		<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -73,6 +73,11 @@
 					<artifactId>liquibase-core</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		</dependency>
 	</dependencies>
 
