--- a/job/pom.xml
+++ b/job/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>init</artifactId>
 		<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -81,6 +81,10 @@
 				<exclusion>
 					<groupId>br.com.insidesoftwares</groupId>
 					<artifactId>securitycommons</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>br.com.insidesoftwares.securitycommons</groupId>
+					<artifactId>azure-active-directory</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
