Ajustes na utilização do Profile

--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -11,10 +11,34 @@
 
     <artifactId>configuration</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+		<properties>
+				<maven.compiler.source>17</maven.compiler.source>
+				<maven.compiler.target>17</maven.compiler.target>
+		</properties>
+
+		<profiles>
+			<profile>
+				<id>azure</id>
+				<dependencies>
+					<dependency>
+						<groupId>br.com.insidesoftwares.securitycommons</groupId>
+						<artifactId>azure-active-directory</artifactId>
+					</dependency>
+				</dependencies>
+			</profile>
+			<profile>
+				<id>keycloak</id>
+				<activation>
+					<activeByDefault>true</activeByDefault>
+				</activation>
+				<dependencies>
+					<dependency>
+						<groupId>br.com.insidesoftwares.securitycommons</groupId>
+						<artifactId>keycloak</artifactId>
+					</dependency>
+				</dependencies>
+			</profile>
+		</profiles>
 
     <dependencies>
 			<dependency>
@@ -41,10 +65,6 @@
 					<exclusion>
 						<groupId>org.mapstruct</groupId>
 						<artifactId>mapstruct</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>com.github.javafaker</groupId>
-						<artifactId>javafaker</artifactId>
 					</exclusion>
 					<exclusion>
 						<groupId>com.google.code.gson</groupId>
