--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -16,30 +16,6 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-		<profiles>
-			<profile>
-				<id>azure</id>
-				<activation>
-					<activeByDefault>true</activeByDefault>
-				</activation>
-				<dependencies>
-					<dependency>
-						<groupId>br.com.insidesoftwares.securitycommons</groupId>
-						<artifactId>azure-active-directory</artifactId>
-					</dependency>
-				</dependencies>
-			</profile>
-			<profile>
-				<id>keycloak</id>
-				<dependencies>
-					<dependency>
-						<groupId>br.com.insidesoftwares.securitycommons</groupId>
-						<artifactId>keycloak</artifactId>
-					</dependency>
-				</dependencies>
-			</profile>
-		</profiles>
-
     <dependencies>
 			<dependency>
 				<groupId>br.com.insidesoftwares</groupId>
@@ -48,6 +24,10 @@
 			<dependency>
 				<groupId>br.com.insidesoftwares</groupId>
 				<artifactId>exception</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>br.com.insidesoftwares.securitycommons</groupId>
+				<artifactId>security</artifactId>
 			</dependency>
 
 			<dependency>
@@ -66,11 +46,6 @@
 			<dependency>
 				<groupId>org.mapstruct</groupId>
 				<artifactId>mapstruct</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>com.github.javafaker</groupId>
-				<artifactId>javafaker</artifactId>
-				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
@@ -111,6 +86,11 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-test</artifactId>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.platform</groupId>
+				<artifactId>junit-platform-launcher</artifactId>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
